--- a/css.css
+++ b/css.css
@@ -5,7 +5,7 @@
 
 h2 {
     font-size: 4em;
-    color: #0e3742;
+    color: #420e0e;
     text-transform: uppercase;
     margin-top: 100px;
     text-align: center;
@@ -13,7 +13,7 @@ h2 {
 }
 
 body {
-    background-color: #0d7916;
+    background-color: #790d0d;
 }
 
 h2 span {
@@ -22,13 +22,13 @@ h2 span {
 
 @keyframes animate {
     0%,18%,20%,50.1%,60%,65.1%,80%,90.1%,92%{
-        color: #0e4215;
+        color: #420e19;
         text-shadow: none;
     }
 
     18.1%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,100%{
-        color: #fff;
-        text-shadow: 0 0 10px #03f42b, 0 0 20px #03f41b, 0 0 40px #03f413, 0 0 80px #03f45b, 0 0 160px #03f40b, 0 0 400px #03f43b;
+        color: rgb(143, 0, 45);
+        text-shadow: 0 0 10px #f42b03, 0 0 20px #f4034b, 0 0 40px #f42303, 0 0 80px #f4034b, 0 0 160px #f41b03, 0 0 400px #f4034b;
     }
 }
 h2 span:nth-child(even){
